# sample/Demo.Api.Generated/Contracts/Files/Models/FileAsFormDataRequest.cs
@@ -1,5 +1,7 @@
-﻿using System.CodeDom.Compiler;
+using System.CodeDom.Compiler;
+using System.Collections.Generic;
 using System.ComponentModel.DataAnnotations;
+using Microsoft.AspNetCore.Http;
 
 //------------------------------------------------------------------------------
 // This code was auto-generated by ApiGenerator 1.1.124.0.
@@ -7,23 +9,28 @@ using System.ComponentModel.DataAnnotations;
 // Changes to this file may cause incorrect behavior and will be lost if
 // the code is regenerated.
 //------------------------------------------------------------------------------
-namespace Demo.Api.Generated.Contracts.Items
+namespace Demo.Api.Generated.Contracts.Files
 {
     /// <summary>
-    /// Item.
+    /// FileAsFormDataRequest.
     /// </summary>
     [GeneratedCode("ApiGenerator", "1.1.124.0")]
-    public class Item
+    public class FileAsFormDataRequest
     {
         [Required]
-        public string Name { get; set; }
+        public string ItemName { get; set; }
+
+        public IFormFile? File { get; set; }
+
+        [Required]
+        public List<string> Items { get; set; }
 
         /// <summary>
         /// Converts to string.
         /// </summary>
         public override string ToString()
         {
-            return $"{nameof(Name)}: {Name}";
+            return $"{nameof(ItemName)}: {ItemName}, {nameof(File)}: {File}, {nameof(Items)}.Count: {Items?.Count ?? 0}";
         }
     }
 }
