# sample/Demo.Api.Generated/Contracts/Files/Parameters/GetFileByIdParameters.cs
@@ -1,5 +1,6 @@
 ﻿using System.CodeDom.Compiler;
 using System.ComponentModel.DataAnnotations;
+using Microsoft.AspNetCore.Mvc;
 
 //------------------------------------------------------------------------------
 // This code was auto-generated by ApiGenerator 1.1.124.0.
@@ -7,23 +8,30 @@ using System.ComponentModel.DataAnnotations;
 // Changes to this file may cause incorrect behavior and will be lost if
 // the code is regenerated.
 //------------------------------------------------------------------------------
-namespace Demo.Api.Generated.Contracts.Items
+namespace Demo.Api.Generated.Contracts.Files
 {
     /// <summary>
-    /// Item.
+    /// Parameters for operation request.
+    /// Description: Get File By Id.
+    /// Operation: GetFileById.
+    /// Area: Files.
     /// </summary>
     [GeneratedCode("ApiGenerator", "1.1.124.0")]
-    public class Item
+    public class GetFileByIdParameters
     {
+        /// <summary>
+        /// The file id.
+        /// </summary>
+        [FromRoute(Name = "id")]
         [Required]
-        public string Name { get; set; }
+        public string Id { get; set; }
 
         /// <summary>
         /// Converts to string.
         /// </summary>
         public override string ToString()
         {
-            return $"{nameof(Name)}: {Name}";
+            return $"{nameof(Id)}: {Id}";
         }
     }
 }
