# sample/Demo.Api.Generated/Contracts/Files/Results/UploadFileAsFormDataResult.cs
@@ -1,0 +1,40 @@
+﻿using System.CodeDom.Compiler;
+using System.Net;
+using Atc.Rest.Results;
+using Microsoft.AspNetCore.Mvc;
+
+//------------------------------------------------------------------------------
+// This code was auto-generated by ApiGenerator 1.1.124.0.
+//
+// Changes to this file may cause incorrect behavior and will be lost if
+// the code is regenerated.
+//------------------------------------------------------------------------------
+namespace Demo.Api.Generated.Contracts.Files
+{
+    /// <summary>
+    /// Results for operation request.
+    /// Description: Upload a file as FormData.
+    /// Operation: UploadFileAsFormData.
+    /// Area: Files.
+    /// </summary>
+    [GeneratedCode("ApiGenerator", "1.1.124.0")]
+    public class UploadFileAsFormDataResult : ResultBase
+    {
+        private UploadFileAsFormDataResult(ActionResult result) : base(result) { }
+
+        /// <summary>
+        /// 200 - Ok response.
+        /// </summary>
+        public static UploadFileAsFormDataResult Ok(string? message = null) => new UploadFileAsFormDataResult(ResultFactory.CreateContentResult(HttpStatusCode.OK, message));
+
+        /// <summary>
+        /// 400 - BadRequest response.
+        /// </summary>
+        public static UploadFileAsFormDataResult BadRequest(string? message = null) => new UploadFileAsFormDataResult(ResultFactory.CreateContentResultWithValidationProblemDetails(HttpStatusCode.BadRequest, message));
+
+        /// <summary>
+        /// Performs an implicit conversion from UploadFileAsFormDataResult to ActionResult.
+        /// </summary>
+        public static implicit operator UploadFileAsFormDataResult(string response) => Ok(response);
+    }
+}
