# sample/Demo.Api.Generated/Endpoints/FilesController.cs
@@ -1,0 +1,72 @@
+﻿using System;
+using System.CodeDom.Compiler;
+using System.Threading;
+using System.Threading.Tasks;
+using Demo.Api.Generated.Contracts.Files;
+using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Mvc;
+
+//------------------------------------------------------------------------------
+// This code was auto-generated by ApiGenerator 1.1.124.0.
+//
+// Changes to this file may cause incorrect behavior and will be lost if
+// the code is regenerated.
+//------------------------------------------------------------------------------
+namespace Demo.Api.Generated.Endpoints
+{
+    /// <summary>
+    /// Endpoint definitions.
+    /// Area: Files.
+    /// </summary>
+    [ApiController]
+    [Route("/api/v1/files")]
+    [GeneratedCode("ApiGenerator", "1.1.124.0")]
+    public class FilesController : ControllerBase
+    {
+        /// <summary>
+        /// Description: Get File By Id.
+        /// Operation: GetFileById.
+        /// Area: Files.
+        /// </summary>
+        [HttpGet("form-data/{id}")]
+        [ProducesResponseType(typeof(string), StatusCodes.Status200OK)]
+        [ProducesResponseType(typeof(ProblemDetails), StatusCodes.Status404NotFound)]
+        public Task<ActionResult> GetFileByIdAsync(GetFileByIdParameters parameters, [FromServices] IGetFileByIdHandler handler, CancellationToken cancellationToken)
+        {
+            if (handler is null)
+            {
+                throw new ArgumentNullException(nameof(handler));
+            }
+
+            return InvokeGetFileByIdAsync(parameters, handler, cancellationToken);
+        }
+
+        /// <summary>
+        /// Description: Upload a file as FormData.
+        /// Operation: UploadFileAsFormData.
+        /// Area: Files.
+        /// </summary>
+        [HttpPost("form-data/single")]
+        [ProducesResponseType(typeof(string), StatusCodes.Status200OK)]
+        [ProducesResponseType(typeof(ValidationProblemDetails), StatusCodes.Status400BadRequest)]
+        public Task<ActionResult> UploadFileAsFormDataAsync(UploadFileAsFormDataParameters parameters, [FromServices] IUploadFileAsFormDataHandler handler, CancellationToken cancellationToken)
+        {
+            if (handler is null)
+            {
+                throw new ArgumentNullException(nameof(handler));
+            }
+
+            return InvokeUploadFileAsFormDataAsync(parameters, handler, cancellationToken);
+        }
+
+        private static async Task<ActionResult> InvokeGetFileByIdAsync(GetFileByIdParameters parameters, IGetFileByIdHandler handler, CancellationToken cancellationToken)
+        {
+            return await handler.ExecuteAsync(parameters, cancellationToken);
+        }
+
+        private static async Task<ActionResult> InvokeUploadFileAsFormDataAsync(UploadFileAsFormDataParameters parameters, IUploadFileAsFormDataHandler handler, CancellationToken cancellationToken)
+        {
+            return await handler.ExecuteAsync(parameters, cancellationToken);
+        }
+    }
+}
