# sample/Demo.Api.Generated/Resources/ApiSpecification.yaml
@@ -378,6 +378,7 @@ paths:
       operationId: getEventArgsById
   /eventArgs:
     get:
+      operationId: getEventArgs
       summary: Get EventArgs List
       description: Get EventArgs List
       tags: []
@@ -390,7 +391,46 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/EventArgs'
-      operationId: getEventArgs
+  '/files/form-data/{id}':
+    parameters:
+      - name: id
+        in: path
+        description: The file id
+        required: true
+        schema:
+          type: string
+    get:
+      operationId: getFileById
+      summary: Get File By Id
+      description: Get File By Id
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+          headers: {}
+        '404':
+          description: Not Found
+  /files/form-data/single:
+    post:
+      operationId: uploadFileAsFormData
+      summary: Upload a file as FormData
+      description: Upload a file as FormData
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/FileAsFormDataRequest'
+    parameters: []
 components:
   parameters:
     pagingPageSize:
@@ -794,3 +834,20 @@ components:
           format: uuid
         eventName:
           type: string
+    FileAsFormDataRequest:
+      title: FileAsFormDataRequest
+      type: object
+      properties:
+        itemName:
+          type: string
+        file:
+          type: string
+          format: binary
+          nullable: true
+        items:
+          type: array
+          items:
+            type: string
+      required:
+        - itemName
+        - items
